--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'listing_list' %}"><i class="fas fa-store me-1"></i>Marketplace</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'forums:category_list' %}"><i class="fas fa-comments me-1"></i>Forums</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
