--- a/templates/accounts/blog_post_detail.html
+++ b/templates/accounts/blog_post_detail.html
@@ -32,21 +32,7 @@
                 </div>
             </div>
             {% if user.is_authenticated %}
-                {% if user.is_superuser %}
-                    <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary">Back to Home</a>
-                {% elif user.user_type == 'LANDOWNER' %}
-                    <a href="{% url 'user_dashboard' %}" class="btn btn-secondary">Back to Home</a>
-                {% elif user.user_type == 'FARMER' %}
-                    <a href="{% url 'farmer_dashboard' %}" class="btn btn-secondary">Back to Home</a>
-                {% elif user.user_type == 'WORKER' %}
-                    <a href="{% url 'worker_dashboard' %}" class="btn btn-secondary">Back to Home</a>
-                {% elif user.user_type == 'INVESTOR' %}
-                    <a href="{% url 'investor_home' %}" class="btn btn-secondary">Back to Home</a>
-                {% elif user.user_type == 'STUDENT' %}
-                    <a href="{% url 'student_dashboard' %}" class="btn btn-secondary">Back to Home</a>
-                {% else %}
-                    <a href="/" class="btn btn-secondary">Back to Home</a>
-                {% endif %}
+                <a href="{% url user_home_url %}" class="btn btn-secondary">Back to Home</a>
             {% else %}
                 <a href="/" class="btn btn-secondary">Back to Home</a>
             {% endif %}
