--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -9,133 +9,8 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h2>Profile</h2>
-                    {% if user.user_type == 'FARMER' %}
-                        <a href="{% url 'farmer_dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% elif user.user_type == 'INVESTOR' %}
-                        <a href="{% url 'investor_home' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% elif user.user_type == 'WORKER' %}
-                        <a href="{% url 'worker_dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% elif user.user_type == 'STUDENT' %}
-                        <a href="{% url 'student_dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% elif user.is_superuser %}
-                        <a href="{% url 'admin_dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% else %}
-                        <a href="{% url 'user_dashboard' %}" class="btn btn-primary">Go to Dashboard</a>
-                        {% if user.is_authenticated %}
-                            {% if user.is_superuser %}
-                                <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'LANDOWNER' %}
-                                <a href="{% url 'landowner_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'FARMER' %}
-                                <a href="{% url 'farmer_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'WORKER' %}
-                                <a href="{% url 'worker_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'INVESTOR' %}
-                                <a href="{% url 'investor_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% elif user.user_type == 'STUDENT' %}
-                                <a href="{% url 'student_home' %}" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% else %}
-                                <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                            {% endif %}
-                        {% else %}
-                            <a href="/" class="btn btn-secondary ms-2">Back to Home</a>
-                        {% endif %}
-                    {% endif %}
+                    <a href="{% url user_dashboard_url %}" class="btn btn-primary">Go to Dashboard</a>
+                    <a href="{% url user_home_url %}" class="btn btn-secondary ms-2">Back to Home</a>
                 </div>
             </div>
             <div class="card-body">
