--- a/templates/accounts/worker_dashboard.html
+++ b/templates/accounts/worker_dashboard.html
@@ -16,25 +16,11 @@
                             <p class="mb-0">Ready to tackle today's farm tasks? Here's your work overview.</p>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            {% if user.is_authenticated %}
-                                {% if user.is_superuser %}
-                                    <a href="{% url 'admin_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% elif user.user_type == 'LANDOWNER' %}
-                                    <a href="{% url 'user_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% elif user.user_type == 'FARMER' %}
-                                    <a href="{% url 'farmer_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% elif user.user_type == 'WORKER' %}
-                                    <a href="{% url 'worker_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% elif user.user_type == 'INVESTOR' %}
-                                    <a href="{% url 'investor_home' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% elif user.user_type == 'STUDENT' %}
-                                    <a href="{% url 'student_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% else %}
-                                    <a href="/" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                                {% endif %}
-                            {% else %}
-                                <a href="/" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
-                            {% endif %}
+                                    {% if user.is_authenticated %}
+            <a href="{% url user_home_url %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+        {% else %}
+            <a href="/" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+        {% endif %}
                             <div class="row">
                                 <div class="col-4">
                                     <div class="text-center">
